components/out-of-scope/application/kubernetes-manifests/nginx-listener.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-listener
spec:
  selector:
    matchLabels:
      app: nginx-listener
  template:
    metadata:
      labels:
        app: nginx-listener
    spec:
      terminationGracePeriodSeconds: 5
      volumes:
       - name: nginx-config
         configMap:
           name: nginx-config-listener
       - name: ssl
         secret:
           secretName: tls-hipsterservice
      containers:
      - name: nginx
        image: nginx:1.14.2
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: nginx-ssl
          mountPath: /etc/nginx/ssl
          name: ssl
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi


# There is a 5 port per ILB maximium limit, the Kube API spec doesn't appear to
# support managing an ILB with ALL ports open mentioned in the documentation:
# (https://cloud.google.com/kubernetes-engine/docs/how-to/internal-load-balancing#limits).
# The solution is to split the ILBs in to nginx-listener-1|2
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-listener-1
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  selector:
    app: nginx-listener
  ports:
  - name: productcatalogservice
    port: 4443
    targetPort: 4443
  - name: currencyservice
    port: 4444
    targetPort: 4444
  - name: cartservice
    port: 4445
    targetPort: 4445
  - name: recommendationservice
    port: 4446
    targetPort: 4446
  - name: shippingservice
    port: 4447
    targetPort: 4447

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-listener-2
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  selector:
    app: nginx-listener
  ports:
  - name: adservice
    port: 4448
    targetPort: 4448
  - name: emailservice
    port: 4449
    targetPort: 4449
